cmake_minimum_required(VERSION 3.2)
project(ffnet)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    example/basic_tcp_pingpong/client_main.cpp
    example/basic_tcp_pingpong/CMakeLists.txt
    example/basic_tcp_pingpong/message.h
    example/basic_tcp_pingpong/server_main.cpp
    example/pb_tcp_pingpong/client_main.cpp
    example/pb_tcp_pingpong/CMakeLists.txt
    example/pb_tcp_pingpong/message.pb.cc
    example/pb_tcp_pingpong/message.pb.h
    example/pb_tcp_pingpong/server_main.cpp
    example/tcp_pingpang/client_main.cpp
    example/tcp_pingpang/CMakeLists.txt
    example/tcp_pingpang/message.h
    example/tcp_pingpang/server_main.cpp
    example/thread_tcp_pingpong/client_main.cpp
    example/thread_tcp_pingpong/main.cpp
    example/thread_tcp_pingpong/message.h
    example/thread_tcp_pingpong/server_main.cpp
    example/udp_pingpong/client_main.cpp
    example/udp_pingpong/CMakeLists.txt
    example/udp_pingpong/main.cpp
    example/udp_pingpong/server_main.cpp
    network/common/log/logger.cpp
    network/common/log/logger.h
    network/common/log/logwriter.cpp
    network/common/log/logwriter.h
    network/common/archive.cpp
    network/common/archive.h
    network/common/archive_data.h
    network/common/blocking_queue.h
    network/common/defines.h
    network/common/event_hook.h
    network/common/log.cpp
    network/common/log.h
    network/common/shared_buffer.cpp
    network/common/shared_buffer.h
    network/common/singleton.h
    network/common/sync_queue.h
    network/common/variable_with_mutex.h
    network/extension/udpretrans/udp_retrans.h
    network/extension/udpretrans/upd_retrans_point.h
    network/extension/package_types.h
    network/framework/nervure_config.cpp
    network/framework/nervure_config.h
    network/middleware/bonder_splitter.h
    network/middleware/event_handler.h
    network/middleware/length_bonder_splitter.cpp
    network/middleware/length_bonder_splitter.h
    network/middleware/raw_pkg_handler.h
    network/nervures/net_nervure.cpp
    network/nervures/net_nervure.h
    network/nervures/net_nervure_from_file.h
    network/nervures/proto_buf_nervure.cpp
    network/nervures/proto_buf_nervure.h
    network/nervures/thread_nervure.cpp
    network/nervures/thread_nervure.h
    network/nervures/typed_net_nervure.cpp
    network/nervures/typed_net_nervure.h
    network/network/asio_connection.cpp
    network/network/asio_connection.h
    network/network/end_point.h
    network/network/endpoint_data.cpp
    network/network/endpoint_data.h
    network/network/events.h
    network/network/net_buffer.cpp
    network/network/net_buffer.h
    network/network/tcp_client.cpp
    network/network/tcp_client.h
    network/network/tcp_connection_base.cpp
    network/network/tcp_connection_base.h
    network/network/tcp_server.cpp
    network/network/tcp_server.h
    network/network/udp_point.cpp
    network/network/udp_point.h
    network/package/package.cpp
    network/package/package.h
    network/package/pkg_callback.h
    network/package/proto_buf_wrapper_pkg.cpp
    network/package/proto_buf_wrapper_pkg.h
    network/CMakeLists.txt
    network/common.h
    network/network.h
    test/test_arch/main.cpp
    test/test_serialize/main.cpp
    test/CMakeLists.txt
    test/event_handler.cpp)

add_executable(ffnet ${SOURCE_FILES})